fix star counter on safari browser

--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -264,12 +264,12 @@ body
 .banner-jwt
   background black
   text-align center
-  -webkit-backface-visibility: hidden;
-  -webkit-transform: translateZ(0);
+  -webkit-backface-visibility hidden
+  -webkit-transform translateZ(0)
   +breakpoint("tablet")
     padding 140px 0 60px
   +breakpoint("desktop")
-    padding 200px 0 100px
+    padding 150px 0 40px
 
   p span
     opacity: 0;
@@ -299,18 +299,6 @@ body
       margin-bottom 20px
       +breakpoint("desktop")
         width 90px
-
-  svg
-    g#group
-      perspective 1000
-      -webkit-perspective 100
-      webkit-transform-style: preserve-3d;
-      transform-style: preserve-3d;
-    path:nth-child(1)
-      backface-visibility: hidden;
-      transform-style: preserve-3d;
-      transform(perspective(400) translate3d(0, 0, -120px))
-
 
 
 // debugger-jwt
@@ -665,7 +653,7 @@ body
       .maintainer
         float left
         font-size 12px
-        margin-top 3px
+        margin-top 4px
         i
           vertical-align middle
           margin-right 2px
@@ -683,7 +671,7 @@ body
           vertical-align middle
           margin-right 5px
         a
-          font-size 13px
+          font-size 12px
           color #4A4A4A
           text-decoration none
 
